@@ -35,8 +35,8 @@ extern "C" {
 
 #ifdef WIN32
 #define WIN32_LEAN_AND_MEAN
-#include <windows.h>
 #include <winsock2.h>
+#include <windows.h>
 #undef WIN32_LEAN_AND_MEAN
 #endif
 
