@@ -29,10 +29,10 @@
 #endif
 
 #ifdef WIN32
+#include <winsock2.h>
 #define WIN32_LEAN_AND_MEAN
 #include <windows.h>
 #undef WIN32_LEAN_AND_MEAN
-#include <winsock2.h>
 #endif
 
 #include <sys/types.h>
